--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Pan <panfree23@gmail.com>",
   "scripts": {
     "dev": "vue-cli-service serve",
+    "stage": "vue-cli-service serve --mode staging",
     "build:prod": "vue-cli-service build",
     "build:stage": "vue-cli-service build --mode staging",
     "preview": "node build/index.js --preview",
@@ -14,17 +15,22 @@
     "test:ci": "npm run lint && npm run test:unit"
   },
   "dependencies": {
+    "ali-oss": "^6.16.0",
     "axios": "0.18.1",
     "core-js": "3.6.5",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
+    "moment": "^2.29.1",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
     "vue-i18n": "^8.24.0",
     "vue-router": "3.0.6",
-    "vuex": "3.1.0"
+    "vuex": "3.1.0",
+    "vxe-table": "^3.2.16",
+    "vxe-table-plugin-element": "^1.11.2",
+    "xe-utils": "^3.1.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
@@ -36,6 +42,7 @@
     "babel-eslint": "10.1.0",
     "babel-jest": "23.6.0",
     "babel-plugin-dynamic-import-node": "2.3.3",
+    "babel-plugin-import": "^1.13.3",
     "chalk": "2.4.2",
     "connect": "3.6.6",
     "eslint": "6.7.2",
